objects/tffa__FinancialStatementItem__c.object
<CustomObject>
    <description>Represents a data point (usually of currency value) in a financial statement. When viewed collectively these help paint a picture of the financial health and potential of an entity. It can have levels. A group level item represents a head (or sub head). e.g. Assets, Liabilities, etc. Such items usually hold other sublevel items and report an aggregate value. A leaf level item represents a specific (atomic) data point. e.g. Office Equipment (assets), Accounts Receivable, etc.</description>
    <fields>
        <fullName>tffa__Code__c</fullName>
        <description>A logical identifier. Used for referring the item from other items within the same statement. e.g. referring ancestor items in the group field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Comments__c</fullName>
        <description>Additional information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialStatement__c</fullName>
        <description>Parent Financial Statement</description>
        <label>Financial Statement</label>
        <referenceTo>tffa__FinancialStatement__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Group__c</fullName>
        <description>The group or hierarchy to which the item belongs. A dot delimited path. Each node in the path is an item code pointing to an ancestor item. The order of the nodes defines  the ancestral. A root level item does not have a group.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a group level item.</description>
        <label>Is group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Level__c</fullName>
        <description>The level of the item in the hierarchy. 0 is root level. Equal to number of ancestors (defined by group field).</description>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>The relative order of the item among other items in the same statement.</description>
        <label>Sort order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Value__c</fullName>
        <description>Data value (usually currency) associated with the item.</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Financial Statement Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statement Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>